--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'io.fabric'
@@ -8,6 +9,7 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url 'https://maven.fabric.io/public' }
     maven { url 'https://github.com/linchaolong/stetho-realm/raw/master/maven-repo' }
+    mavenCentral()
 }
 
 buildscript {
@@ -66,7 +68,7 @@ android {
     buildTypes {
         debug {
             debuggable true
-            minifyEnabled false
+            minifyEnabled true
             applicationIdSuffix '.debug'
             testCoverageEnabled false
         }
@@ -133,5 +135,6 @@ dependencies {
     androidTestCompile(rootProject.ext.support_espressocore, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 apply plugin: 'com.google.gms.google-services'
